[gd_scene load_steps=14 format=2]

[ext_resource path="res://TerminalServer.gd" type="Script" id=1]
[ext_resource path="res://themes/terminal.tres" type="Theme" id=2]
[ext_resource path="res://themes/terminal_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/EHSMB.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/DS-TERM.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://fonts/F25_Bank_Printer.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=4]
size = 55
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 101
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0941176, 0.0823529, 0.0823529, 1 )

[sub_resource type="DynamicFont" id=6]
size = 60
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0941176, 0.0823529, 0.0823529, 1 )

[sub_resource type="DynamicFont" id=7]
size = 25
use_filter = true
font_data = ExtResource( 6 )

[node name="TerminalServer" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
margin_left = 243.0
margin_top = 26.0
margin_right = 1158.0
margin_bottom = 817.0
rect_pivot_offset = Vector2( -1, 1 )

[node name="IPLabel" type="Label" parent="CanvasLayer/Panel"]
margin_left = 1.0
margin_top = 2.0
margin_right = 409.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 4 )
text = "server IP"

[node name="GameTimerLabel" type="Label" parent="CanvasLayer/Panel"]
margin_left = 329.0
margin_top = 90.0
margin_right = 668.0
margin_bottom = 193.0
custom_fonts/font = SubResource( 8 )
text = "0:00"

[node name="MessageLog" type="TextEdit" parent="CanvasLayer/Panel"]
margin_left = 6.0
margin_top = 223.0
margin_right = 902.0
margin_bottom = 708.0
custom_fonts/font = SubResource( 5 )
text = "Console data:"

[node name="StatusLabel" type="Label" parent="CanvasLayer/Panel"]
margin_left = 18.0
margin_top = 726.0
margin_right = 65.0
margin_bottom = 740.0
text = "STATUS"

[node name="ConnectionsLabel" type="Label" parent="CanvasLayer/Panel"]
margin_left = 19.0
margin_top = 748.0
margin_right = 113.0
margin_bottom = 762.0
text = "CONNECTIONS"

[node name="GreenPanel" type="Panel" parent="CanvasLayer"]
margin_right = 237.0
margin_bottom = 900.0
rect_pivot_offset = Vector2( 237, 477 )
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 3 )

[node name="GreenLabel" type="Label" parent="CanvasLayer/GreenPanel"]
margin_left = 16.0
margin_top = 6.0
margin_right = 189.0
margin_bottom = 67.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "SCORE"

[node name="GreenScoreLabel" type="Label" parent="CanvasLayer/GreenPanel"]
margin_left = 16.0
margin_top = 56.0
margin_right = 151.0
margin_bottom = 117.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="GreenLabel2" type="Label" parent="CanvasLayer/GreenPanel"]
margin_left = 16.0
margin_top = 776.0
margin_right = 151.0
margin_bottom = 823.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 6 )
text = "INTEL"

[node name="GreenIntelLabel" type="Label" parent="CanvasLayer/GreenPanel"]
margin_left = 16.0
margin_top = 830.0
margin_right = 151.0
margin_bottom = 891.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="OrangePanel" type="Panel" parent="CanvasLayer"]
margin_left = 1163.0
margin_right = 1400.0
margin_bottom = 900.0
rect_pivot_offset = Vector2( 237, 477 )
custom_styles/panel = SubResource( 2 )

[node name="OrangeLabel" type="Label" parent="CanvasLayer/OrangePanel"]
margin_left = 16.0
margin_top = 6.0
margin_right = 189.0
margin_bottom = 67.0
custom_colors/font_color = Color( 0.866667, 0.47451, 0.14902, 1 )
custom_fonts/font = ExtResource( 3 )
text = "SCORE"

[node name="OrangeScoreLabel" type="Label" parent="CanvasLayer/OrangePanel"]
margin_left = 16.0
margin_top = 56.0
margin_right = 151.0
margin_bottom = 117.0
custom_colors/font_color = Color( 0.866667, 0.47451, 0.14902, 1 )
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="OrangeLabel2" type="Label" parent="CanvasLayer/OrangePanel"]
margin_left = 16.0
margin_top = 776.0
margin_right = 169.0
margin_bottom = 837.0
custom_colors/font_color = Color( 0.866667, 0.47451, 0.14902, 1 )
custom_fonts/font = ExtResource( 3 )
text = "INTEL"

[node name="OrangeIntelLabel" type="Label" parent="CanvasLayer/OrangePanel"]
margin_left = 16.0
margin_top = 830.0
margin_right = 151.0
margin_bottom = 891.0
custom_colors/font_color = Color( 0.866667, 0.47451, 0.14902, 1 )
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="StartGameButton" type="Button" parent="CanvasLayer"]
margin_left = 611.0
margin_top = 836.0
margin_right = 793.0
margin_bottom = 881.0
custom_fonts/font = SubResource( 7 )
text = "Start Game"

[node name="ServerDataPulse" type="Timer" parent="."]
wait_time = 4.0

[node name="WaitTimer" type="Timer" parent="."]

[connection signal="pressed" from="CanvasLayer/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="timeout" from="ServerDataPulse" to="." method="_on_ServerDataPulse_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
